--- a/Windows/cpp/msvs.html
+++ b/Windows/cpp/msvs.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Windows - dots</title>
+        <title>msvs - dots</title>
 
 
         <!-- Custom HTML head -->
@@ -13,31 +13,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../.\theme\catppuccin.css">
-        <link rel="stylesheet" href="../.\theme\catppuccin-highlight.css">
+        <link rel="stylesheet" href="../../.\theme\catppuccin.css">
+        <link rel="stylesheet" href="../../.\theme\catppuccin-highlight.css">
 
     </head>
     <body>
         <!-- Provide site root to javascript -->
         <script type="text/javascript">
-            var path_to_root = "../";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="../dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Windows/cpp/msvs.html" class="active"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="../../Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="../../Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="../../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="../../dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                     <h1 class="menu-title">dots</h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -148,86 +148,46 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="windows"><a class="header" href="#windows">Windows</a></h1>
-<h2 id="installations"><a class="header" href="#installations">Installations</a></h2>
-<p><code>chocolatey</code> is a package manager for Windows. It is similar to <code>apt-get</code> on Linux.</p>
+                        <h1 id="visual-studio"><a class="header" href="#visual-studio">Visual Studio</a></h1>
+<p>Installations is simple. Just download the installer from <a href="https://visualstudio.microsoft.com/downloads/">here</a>.</p>
+<hr />
 <blockquote>
-<p><strong>Note</strong>: Powershell Core is installed</p>
+<p><strong>Visual C++ Compiler stdc++=20</strong></p>
 </blockquote>
-<pre><code class="language-powershell">Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'));
-</code></pre>
+<h2 id="installation-guide"><a class="header" href="#installation-guide">Installation guide</a></h2>
+<p>~ Install Visual Sudio</p>
+<p>~ Modify Installation</p>
+<p>~ Individual Components &gt; search <code>modules</code></p>
+<h2 id="activation"><a class="header" href="#activation">Activation</a></h2>
+<ul>
+<li>
+<p>Solution Properties &gt; Configuration Properties &gt; General: C++ Language Standard = &quot;Preview - Features from the Latest C++ Working Draft (/std:c++latest)&quot;</p>
+</li>
+<li>
+<p>Solution Properties &gt; C/C++ &gt; Language : Enable External C++ Standard Library Modules = &quot;Yes(/experimental:module)&quot;</p>
+</li>
+</ul>
+<h2 id="import-commands"><a class="header" href="#import-commands"><strong>import commands</strong></a></h2>
+<ul>
+<li>std.filesystem -&gt; <code>&lt;filesystem&gt;</code></li>
+<li>std.regex -&gt; <code>&lt;regex&gt;</code></li>
+<li>std.memory -&gt; <code>&lt;memory&gt;</code></li>
+<li>std.threading -&gt; <code>&lt;atomic&gt;, &lt;condition_variable&gt;, &lt;future&gt;, &lt;mutex&gt;, &lt;shared_mutex&gt; and &lt;thread&gt;</code></li>
+<li>std.core -&gt; Everything else in the Standard Library</li>
+</ul>
 <blockquote>
-<p><strong>Note</strong>: <code>choco</code> is installed. Restart the terminal to use it.</p>
-<p><em><strong>Winget</strong></em> is probably installed.</p>
+<p>Note: -&gt; = Provides the contents of headers</p>
 </blockquote>
-<h2 id="list-of-installed-packages"><a class="header" href="#list-of-installed-packages">List of Installed Packages</a></h2>
-<h3 id="chocolatey"><a class="header" href="#chocolatey">Chocolatey</a></h3>
-<ul>
-<li>gh</li>
-<li>ripgrep</li>
-<li>llvm</li>
-</ul>
-<h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
-<ul>
-<li>Google.Chrome</li>
-<li>Google.Drive</li>
-<li>Giorgiotani.Peazip</li>
-<li>Kitware.CMake</li>
-<li>Microsoft.PowerToys</li>
-<li>TheDocumentFoundation.LibreOffice</li>
-<li>OpenJS.NodeJS</li>
-<li>Rustlang.Rustup</li>
-<li>SumatraPDF.SumatraPDF</li>
-<li>GnuWin32.Tar</li>
-<li>VLC media player</li>
-<li>Vivaldi</li>
-<li>OliverSchwendener.ueli</li>
-<li>JanDeDobbeleer.OhMyPosh</li>
-<li>Rainmeter.Rainmeter</li>
-<li>Microsoft.WindowsTerminal</li>
-<li>Git.Git</li>
-<li>Bitwarden.Bitwarden</li>
-<li>msys2.msys2</li>
-<li>Microsoft.VisualStudioCode</li>
-<li>Oracle.JDK.19</li>
-<li>HXAM</li>
-</ul>
-<h3 id="in-script"><a class="header" href="#in-script">In Script</a></h3>
-<pre><code class="language-powershell">winget install Google.Chrome
-winget install Google.Drive
-winget install Giorgiotani.Peazip
-winget install Kitware.CMake
-winget install Microsoft.PowerToys
-winget install TheDocumentFoundation.LibreOffice
-winget install OpenJS.NodeJS
-winget install Rustlang.Rustup
-winget install SumatraPDF.SumatraPDF
-winget install GnuWin32.Tar
-winget install VLC media player
-winget install Vivaldi
-winget install OliverSchwendener.ueli
-winget install JanDeDobbeleer.OhMyPosh
-winget install Rainmeter.Rainmeter
-winget install Microsoft.WindowsTerminal
-winget install Git.Git
-winget install Bitwarden.Bitwarden
-winget install msys2.msys2
-winget install Microsoft.VisualStudioCode
-winget install Oracle.JDK.19
-winget install HXAM
-</code></pre>
-</br>
-<pre><code class="language-shell">choco install gh
-choco install ripgrep
-choco install llvm
-</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../Windows/cpp/cpp.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="../Windows/cpp/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../Windows/cpp/msys.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -237,8 +197,11 @@ choco install llvm
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../Windows/cpp/cpp.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="../Windows/cpp/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../Windows/cpp/msys.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -269,13 +232,13 @@ choco install llvm
         </script>
 
 
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../mark.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../searcher.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../highlight.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../../book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
 
