--- a/dotfiles/dotfiles.html
+++ b/dotfiles/dotfiles.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Windows - dots</title>
+        <title>dotfiles - dots</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="../dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="../Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="../Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="../Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="../wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="../git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="../Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="../dotfiles/dotfiles.html" class="active"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -148,88 +148,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="windows"><a class="header" href="#windows">Windows</a></h1>
-<h2 id="installations"><a class="header" href="#installations">Installations</a></h2>
-<p><code>chocolatey</code> is a package manager for Windows. It is similar to <code>apt-get</code> on Linux.</p>
-<blockquote>
-<p><strong>Note</strong>: Powershell Core is installed</p>
-</blockquote>
-<pre><code class="language-powershell">Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'));
-</code></pre>
-<blockquote>
-<p><strong>Note</strong>: <code>choco</code> is installed. Restart the terminal to use it.</p>
-<p><em><strong>Winget</strong></em> is probably installed.</p>
-</blockquote>
-<h2 id="list-of-installed-packages"><a class="header" href="#list-of-installed-packages">List of Installed Packages</a></h2>
-<h3 id="chocolatey"><a class="header" href="#chocolatey">Chocolatey</a></h3>
-<ul>
-<li>gh</li>
-<li>ripgrep</li>
-<li>llvm</li>
-</ul>
-<h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
-<ul>
-<li>Google.Chrome</li>
-<li>Google.Drive</li>
-<li>Giorgiotani.Peazip</li>
-<li>Kitware.CMake</li>
-<li>Microsoft.PowerToys</li>
-<li>TheDocumentFoundation.LibreOffice</li>
-<li>OpenJS.NodeJS</li>
-<li>Rustlang.Rustup</li>
-<li>SumatraPDF.SumatraPDF</li>
-<li>GnuWin32.Tar</li>
-<li>VLC media player</li>
-<li>Vivaldi</li>
-<li>OliverSchwendener.ueli</li>
-<li>JanDeDobbeleer.OhMyPosh</li>
-<li>Rainmeter.Rainmeter</li>
-<li>Microsoft.WindowsTerminal</li>
-<li>Git.Git</li>
-<li>Bitwarden.Bitwarden</li>
-<li>msys2.msys2</li>
-<li>Microsoft.VisualStudioCode</li>
-<li>Oracle.JDK.19</li>
-<li>HXAM</li>
-</ul>
-<h3 id="in-script"><a class="header" href="#in-script">In Script</a></h3>
-<pre><code class="language-powershell">winget install Google.Chrome
-winget install Google.Drive
-winget install Giorgiotani.Peazip
-winget install Kitware.CMake
-winget install Microsoft.PowerToys
-winget install TheDocumentFoundation.LibreOffice
-winget install OpenJS.NodeJS
-winget install Rustlang.Rustup
-winget install SumatraPDF.SumatraPDF
-winget install GnuWin32.Tar
-winget install VLC media player
-winget install Vivaldi
-winget install OliverSchwendener.ueli
-winget install JanDeDobbeleer.OhMyPosh
-winget install Rainmeter.Rainmeter
-winget install Microsoft.WindowsTerminal
-winget install Git.Git
-winget install Bitwarden.Bitwarden
-winget install msys2.msys2
-winget install Microsoft.VisualStudioCode
-winget install Oracle.JDK.19
-winget install HXAM
-</code></pre>
-</br>
-<pre><code class="language-shell">choco install gh
-choco install ripgrep
-choco install llvm
+                        <h1 id="dotfiles"><a class="header" href="#dotfiles">dotfiles</a></h1>
+<p><img src="http://images.thoughtbot.com/thoughtbot-dotfiles-prompt.png" alt="prompt" /></p>
+<p>Check out the repo <a href="https://github.com/Eshanatnite/dotfiles.git">here</a></p>
+<h2 id="install"><a class="header" href="#install">Install</a></h2>
+<p>Clone onto your laptop:</p>
+<pre><code>git clone --recursive https://github.com/Eshanatnite/dotfiles.git
+
+code dotfiles
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-                            <a rel="next" href="../Windows/cpp/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
+                            <a rel="prev" href="../Database/database.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
                             </a>
+
 
                         <div style="clear: both"></div>
                     </nav>
@@ -237,10 +173,10 @@ choco install llvm
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
-                    <a rel="next" href="../Windows/cpp/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
+                    <a rel="prev" href="../Database/database.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
                     </a>
+
             </nav>
 
         </div>
