--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href=".\theme\catppuccin.css">
+        <link rel="stylesheet" href=".\theme\catppuccin-highlight.css">
 
     </head>
     <body>
@@ -81,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html" class="active"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -104,6 +106,10 @@
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -159,6 +165,7 @@
 <ul>
 <li>gh</li>
 <li>ripgrep</li>
+<li>llvm</li>
 </ul>
 <h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
 <ul>
@@ -182,14 +189,45 @@
 <li>Bitwarden.Bitwarden</li>
 <li>msys2.msys2</li>
 <li>Microsoft.VisualStudioCode</li>
+<li>Oracle.JDK.19</li>
+<li>HXAM</li>
 </ul>
+<h3 id="in-script"><a class="header" href="#in-script">In Script</a></h3>
+<pre><code class="language-powershell">winget install Google.Chrome
+winget install Google.Drive
+winget install Giorgiotani.Peazip
+winget install Kitware.CMake
+winget install Microsoft.PowerToys
+winget install TheDocumentFoundation.LibreOffice
+winget install OpenJS.NodeJS
+winget install Rustlang.Rustup
+winget install SumatraPDF.SumatraPDF
+winget install GnuWin32.Tar
+winget install VLC media player
+winget install Vivaldi
+winget install OliverSchwendener.ueli
+winget install JanDeDobbeleer.OhMyPosh
+winget install Rainmeter.Rainmeter
+winget install Microsoft.WindowsTerminal
+winget install Git.Git
+winget install Bitwarden.Bitwarden
+winget install msys2.msys2
+winget install Microsoft.VisualStudioCode
+winget install Oracle.JDK.19
+winget install HXAM
+</code></pre>
+</br>
+<pre><code class="language-shell">choco install gh
+choco install ripgrep
+choco install llvm
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next" href="Windows/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="Windows/cpp/cpp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -200,7 +238,7 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next" href="Windows/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="Windows/cpp/cpp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
