--- a/print.html
+++ b/print.html
@@ -31,6 +31,8 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href=".\theme\catppuccin.css">
+        <link rel="stylesheet" href=".\theme\catppuccin-highlight.css">
 
     </head>
     <body>
@@ -82,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Windows/Windows.html"><strong aria-hidden="true">1.</strong> Windows</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/cpp.html"><strong aria-hidden="true">1.1.</strong> cpp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows/cpp/msvs.html"><strong aria-hidden="true">1.1.1.</strong> msvs</a></li><li class="chapter-item expanded "><a href="Windows/cpp/msys.html"><strong aria-hidden="true">1.1.2.</strong> msys2</a></li><li class="chapter-item expanded "><a href="Windows/cpp/vc.html"><strong aria-hidden="true">1.1.3.</strong> vcpkg & cmake</a></li></ol></li><li class="chapter-item expanded "><a href="Windows/rust.html"><strong aria-hidden="true">1.2.</strong> rust</a></li><li class="chapter-item expanded "><a href="Windows/settings.html"><strong aria-hidden="true">1.3.</strong> settings</a></li></ol></li><li class="chapter-item expanded "><a href="Windows-Terminal/Windows-Terminal.html"><strong aria-hidden="true">2.</strong> Windows Terminal</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Windows-Terminal/Powershell/powershell.html"><strong aria-hidden="true">2.1.</strong> PowerShell</a></li></ol></li><li class="chapter-item expanded "><a href="wsl/wsl.html"><strong aria-hidden="true">3.</strong> Windows Subsystem for Linux</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">4.</strong> Git</a></li><li class="chapter-item expanded "><a href="Database/database.html"><strong aria-hidden="true">5.</strong> Database</a></li><li class="chapter-item expanded "><a href="dotfiles/dotfiles.html"><strong aria-hidden="true">6.</strong> dotfiles</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -105,6 +107,10 @@
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -160,6 +166,7 @@
 <ul>
 <li>gh</li>
 <li>ripgrep</li>
+<li>llvm</li>
 </ul>
 <h3 id="winget"><a class="header" href="#winget">Winget</a></h3>
 <ul>
@@ -183,19 +190,58 @@
 <li>Bitwarden.Bitwarden</li>
 <li>msys2.msys2</li>
 <li>Microsoft.VisualStudioCode</li>
+<li>Oracle.JDK.19</li>
+<li>HXAM</li>
 </ul>
+<h3 id="in-script"><a class="header" href="#in-script">In Script</a></h3>
+<pre><code class="language-powershell">winget install Google.Chrome
+winget install Google.Drive
+winget install Giorgiotani.Peazip
+winget install Kitware.CMake
+winget install Microsoft.PowerToys
+winget install TheDocumentFoundation.LibreOffice
+winget install OpenJS.NodeJS
+winget install Rustlang.Rustup
+winget install SumatraPDF.SumatraPDF
+winget install GnuWin32.Tar
+winget install VLC media player
+winget install Vivaldi
+winget install OliverSchwendener.ueli
+winget install JanDeDobbeleer.OhMyPosh
+winget install Rainmeter.Rainmeter
+winget install Microsoft.WindowsTerminal
+winget install Git.Git
+winget install Bitwarden.Bitwarden
+winget install msys2.msys2
+winget install Microsoft.VisualStudioCode
+winget install Oracle.JDK.19
+winget install HXAM
+</code></pre>
+</br>
+<pre><code class="language-shell">choco install gh
+choco install ripgrep
+choco install llvm
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="cpp"><a class="header" href="#cpp">CPP</a></h1>
-<h2 id="visual-studio"><a class="header" href="#visual-studio">Visual Studio</a></h2>
+<p>Common CPP Dev Settings that i use.</p>
+<h2 id="microsoft-visual-studio"><a class="header" href="#microsoft-visual-studio">Microsoft Visual Studio</a></h2>
+<p>My Visual Studio Directory Setup</p>
+<ol>
+<li>Output Dir: <code>$(SolutionDir)bin\$(Platform)\$(Configuration)\</code></li>
+<li>Intermideates Dir: <code>$(SolutionDir)bin\intermideates\$(Platform)\$(Configuration)\</code></li>
+<li>Additional Include Directory: <code>$(SolutionDir)src\include,$(SolutionDir)include</code></li>
+</ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="visual-studio"><a class="header" href="#visual-studio">Visual Studio</a></h1>
 <p>Installations is simple. Just download the installer from <a href="https://visualstudio.microsoft.com/downloads/">here</a>.</p>
 <hr />
 <blockquote>
 <p><strong>Visual C++ Compiler stdc++=20</strong></p>
 </blockquote>
-<h3 id="installation-guide"><a class="header" href="#installation-guide">Installation guide</a></h3>
+<h2 id="installation-guide"><a class="header" href="#installation-guide">Installation guide</a></h2>
 <p>~ Install Visual Sudio</p>
 <p>~ Modify Installation</p>
 <p>~ Individual Components &gt; search <code>modules</code></p>
-<h3 id="activation"><a class="header" href="#activation">Activation</a></h3>
+<h2 id="activation"><a class="header" href="#activation">Activation</a></h2>
 <ul>
 <li>
 <p>Solution Properties &gt; Configuration Properties &gt; General: C++ Language Standard = &quot;Preview - Features from the Latest C++ Working Draft (/std:c++latest)&quot;</p>
@@ -204,7 +250,7 @@
 <p>Solution Properties &gt; C/C++ &gt; Language : Enable External C++ Standard Library Modules = &quot;Yes(/experimental:module)&quot;</p>
 </li>
 </ul>
-<h3 id="import-commands"><a class="header" href="#import-commands"><strong>import commands</strong></a></h3>
+<h2 id="import-commands"><a class="header" href="#import-commands"><strong>import commands</strong></a></h2>
 <ul>
 <li>std.filesystem -&gt; <code>&lt;filesystem&gt;</code></li>
 <li>std.regex -&gt; <code>&lt;regex&gt;</code></li>
@@ -215,11 +261,10 @@
 <blockquote>
 <p>Note: -&gt; = Provides the contents of headers</p>
 </blockquote>
-<hr />
-<h2 id="mingw"><a class="header" href="#mingw">MinGW</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="msys2"><a class="header" href="#msys2">MSYS2</a></h1>
 <p>MSYS2 should be installed via winget.</p>
 <p>In the event that it is not, it can be installed from <a href="https://www.msys2.org/">here</a>.</p>
-<h3 id="installingupdating-the-msys2-toolchain"><a class="header" href="#installingupdating-the-msys2-toolchain">Installing/Updating the MSYS2 toolchain</a></h3>
+<h2 id="installingupdating-the-msys2-toolchain"><a class="header" href="#installingupdating-the-msys2-toolchain">Installing/Updating the MSYS2 toolchain</a></h2>
 <p>To update the MSYS2-MINGW toolchain just run the following command in the MSYS2 bash shell.</p>
 <pre><code class="language-terminal">pacman -Syu
 
@@ -233,12 +278,11 @@ pacman -S mingw-w64-clang-x86_64-toolchain
 <blockquote>
 <p>To update the toolchain use the <code>-u</code> flag with the <code>-S</code> flag.</p>
 </blockquote>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="vcpkg--cmake"><a class="header" href="#vcpkg--cmake">Vcpkg &amp; CMake</a></h1>
 <hr />
-<h2 id="cmake"><a class="header" href="#cmake">CMake</a></h2>
-<p>CMake can be installed via winget.</p>
 <h2 id="vcpkg"><a class="header" href="#vcpkg">Vcpkg</a></h2>
 <h3 id="installation"><a class="header" href="#installation">Installation</a></h3>
-<p>To install <em><strong>vcpkg</strong></em> you can run the <a href="Windows/../scripts/install-vcpkg.ps1">script</a>. It's a
+<p>To install <em><strong>vcpkg</strong></em> you can run the <a href="Windows/cpp/../scripts/install-vcpkg.ps1">script</a>. It's a
 Poweshell Script that will clone the repository from the
 <a href="https://github.com/microsoft/vcpkg.git">official page</a> in the location <code>D:\tools\vcpkg</code>
 and then bootstrapping vcpkg.</p>
@@ -283,11 +327,18 @@ place where the top level <code>CMakelists.txt</code> file is.</p>
     ]
 }
 </code></pre>
+<hr />
+<h2 id="cmake"><a class="header" href="#cmake">CMake</a></h2>
+<h3 id="vscode-settings"><a class="header" href="#vscode-settings">VSCode Settings</a></h3>
 <p>To use CMake and vcpkg in Manifest Mode. Add the following to the vscode <code>settings.json</code> file.</p>
 <pre><code class="language-json">&quot;cmake.configureSettings&quot;: {
      &quot;CMAKE_TOOLCHAIN_FILE&quot;: &quot;path/to/vcpkg/scripts/buildsystems/vcpkg.cmake&quot;
 }
 &quot;cmake.configureOnOpen&quot;: true
+</code></pre>
+<h3 id="cmake-common-settings"><a class="header" href="#cmake-common-settings">CMAKE Common Settings</a></h3>
+<pre><code class="language-cmake">set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="rust"><a class="header" href="#rust">Rust</a></h1>
 <h2 id="installation-1"><a class="header" href="#installation-1">Installation</a></h2>
@@ -563,6 +614,15 @@ An error might pop up, but it's fine. For the first time that is completely norm
 )' WHERE name = 'old_tablename';
 </code></pre>
 <pre><code class="language-terminal">pragma writable_schema = 0
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="dotfiles"><a class="header" href="#dotfiles">dotfiles</a></h1>
+<p><img src="http://images.thoughtbot.com/thoughtbot-dotfiles-prompt.png" alt="prompt" /></p>
+<p>Check out the repo <a href="https://github.com/Eshanatnite/dotfiles.git">here</a></p>
+<h2 id="install"><a class="header" href="#install">Install</a></h2>
+<p>Clone onto your laptop:</p>
+<pre><code>git clone --recursive https://github.com/Eshanatnite/dotfiles.git
+
+code dotfiles
 </code></pre>
 
                     </main>
