update website files

--- a/Windows-Terminal/Windows-Terminal.html
+++ b/Windows-Terminal/Windows-Terminal.html
@@ -150,16 +150,16 @@
                     <main>
                         <h1 id="windows-terminal"><a class="header" href="#windows-terminal">Windows Terminal</a></h1>
 <ul>
-<li><a href="%22.%5Csettings.json%22">settings.json</a></li>
-<li><a href="%22.%5CPowershell%22">Powershell Folder</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/settings.json">settings.json</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell">Powershell Folder</a></li>
 </ul>
 <h2 id="settingsjson"><a class="header" href="#settingsjson">settings.json</a></h2>
 <p>contains the settings for the terminal. Themes, colors, etc.</p>
 <h2 id="powershell-folder"><a class="header" href="#powershell-folder">Powershell Folder</a></h2>
 <ul>
-<li><a href="./Powershell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
-<li><a href="./Powershell/setup-windows-terminal.ps1">setup</a></li>
-<li><a href="./Powershell/Theme/">theme</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/setup-windows-terminal.ps1">setup</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell/Theme">theme</a></li>
 </ul>
 <h2 id="powershell_profile"><a class="header" href="#powershell_profile">Powershell_Profile</a></h2>
 <p>conains The Powershell Profile folder that has the profile for the terminal.</p>
@@ -176,11 +176,11 @@ conda config --set auto_activate_base false
 </code></pre>
 <p>Then restart the Terminal.</p>
 <h3 id="how-to-install-pip"><a class="header" href="#how-to-install-pip">How to install pip?</a></h3>
-<p>If for some reason you dont have pip installed in your computer. Run the <a href="../Python/get-pip.py">python script</a></p>
+<p>If for some reason you dont have pip installed in your computer. Run the <a href="https://github.com/Eshanatnight/dotfiles/blob/main/Python/get-pip.py">python script</a></p>
 <pre><code class="language-terminal">cd python get-pip.py
 </code></pre>
 <h2 id="removed-settings"><a class="header" href="#removed-settings">Removed Settings</a></h2>
-<p>Settings that are removed from the <a href="./settings.json">settings.json</a> of the Windows Terminal.</p>
+<p>Settings that are removed from the <code>settings.json</code> of the Windows Terminal.</p>
 <pre><code class="language-json">{
     &quot;profiles&quot;:{
         &quot;list&quot;: [
