--- a/Windows/settings.html
+++ b/Windows/settings.html
@@ -151,7 +151,8 @@
                         <h1 id="settings"><a class="header" href="#settings">Settings</a></h1>
 <h2 id="configuration-files"><a class="header" href="#configuration-files">Configuration Files</a></h2>
 <p>The Settings files can be found</p>
-<p><a href="https://github.com/Eshanatnight/dotfiles/tree/main/.visual-sutdio-settings">Visual Studio</a></p>
+<p><a href="https://github.com/Eshanatnight/dotfiles/blob/main/.visual-sutdio-settings/.vs.settings.tar.gz.tar.gz?raw=true">Visual Studio Settings</a></p>
+<p><a href="https://github.com/Eshanatnight/dotfiles/blob/main/.visual-sutdio-settings/vs-extention.tar.gz?raw=true">Visual Studio Extentions</a></p>
 <p><a href="https://github.com/Eshanatnight/dotfiles/tree/main/.jetbrains-settings">Jetbrains</a></p>
 <h2 id="jetbrains"><a class="header" href="#jetbrains">Jetbrains</a></h2>
 <h3 id="configure-a-wsl-toolchain"><a class="header" href="#configure-a-wsl-toolchain">Configure a WSL Toolchain</a></h3>
