--- a/print.html
+++ b/print.html
@@ -369,7 +369,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 <div style="break-before: page; page-break-before: always;"></div><h1 id="settings"><a class="header" href="#settings">Settings</a></h1>
 <h2 id="configuration-files"><a class="header" href="#configuration-files">Configuration Files</a></h2>
 <p>The Settings files can be found</p>
-<p><a href="https://github.com/Eshanatnight/dotfiles/tree/main/.visual-sutdio-settings">Visual Studio</a></p>
+<p><a href="https://github.com/Eshanatnight/dotfiles/blob/main/.visual-sutdio-settings/.vs.settings.tar.gz.tar.gz?raw=true">Visual Studio Settings</a></p>
+<p><a href="https://github.com/Eshanatnight/dotfiles/blob/main/.visual-sutdio-settings/vs-extention.tar.gz?raw=true">Visual Studio Extentions</a></p>
 <p><a href="https://github.com/Eshanatnight/dotfiles/tree/main/.jetbrains-settings">Jetbrains</a></p>
 <h2 id="jetbrains"><a class="header" href="#jetbrains">Jetbrains</a></h2>
 <h3 id="configure-a-wsl-toolchain"><a class="header" href="#configure-a-wsl-toolchain">Configure a WSL Toolchain</a></h3>
@@ -391,16 +392,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="windows-terminal"><a class="header" href="#windows-terminal">Windows Terminal</a></h1>
 <ul>
-<li><a href="Windows-Terminal/%22.%5Csettings.json%22">settings.json</a></li>
-<li><a href="Windows-Terminal/%22.%5CPowershell%22">Powershell Folder</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/settings.json">settings.json</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell">Powershell Folder</a></li>
 </ul>
 <h2 id="settingsjson"><a class="header" href="#settingsjson">settings.json</a></h2>
 <p>contains the settings for the terminal. Themes, colors, etc.</p>
 <h2 id="powershell-folder"><a class="header" href="#powershell-folder">Powershell Folder</a></h2>
 <ul>
-<li><a href="Windows-Terminal/./Powershell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
-<li><a href="Windows-Terminal/./Powershell/setup-windows-terminal.ps1">setup</a></li>
-<li><a href="Windows-Terminal/./Powershell/Theme/">theme</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/Microsoft.PowerShell_profile.ps1">Powershell_Profile</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/blob/main/Windows%20Terminal/PowerShell/setup-windows-terminal.ps1">setup</a></li>
+<li><a href="https://github.com/Eshanatnight/dotfiles/tree/main/Windows%20Terminal/PowerShell/Theme">theme</a></li>
 </ul>
 <h2 id="powershell_profile"><a class="header" href="#powershell_profile">Powershell_Profile</a></h2>
 <p>conains The Powershell Profile folder that has the profile for the terminal.</p>
@@ -417,11 +418,11 @@ conda config --set auto_activate_base false
 </code></pre>
 <p>Then restart the Terminal.</p>
 <h3 id="how-to-install-pip"><a class="header" href="#how-to-install-pip">How to install pip?</a></h3>
-<p>If for some reason you dont have pip installed in your computer. Run the <a href="Windows-Terminal/../Python/get-pip.py">python script</a></p>
+<p>If for some reason you dont have pip installed in your computer. Run the <a href="https://github.com/Eshanatnight/dotfiles/blob/main/Python/get-pip.py">python script</a></p>
 <pre><code class="language-terminal">cd python get-pip.py
 </code></pre>
 <h2 id="removed-settings"><a class="header" href="#removed-settings">Removed Settings</a></h2>
-<p>Settings that are removed from the <a href="Windows-Terminal/./settings.json">settings.json</a> of the Windows Terminal.</p>
+<p>Settings that are removed from the <code>settings.json</code> of the Windows Terminal.</p>
 <pre><code class="language-json">{
     &quot;profiles&quot;:{
         &quot;list&quot;: [
@@ -502,7 +503,7 @@ Then apply the profile to the powershell and set the theme to the correct locati
 <pre><code class="language-terminal">git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/themes/powerlevel10k;
 </code></pre>
 <h3 id="config-files"><a class="header" href="#config-files">Config Files</a></h3>
-<p>the config files can be found in the <a href="https://github.com/Eshanatnight/dotfiles">dotfiles</a> repo</p>
+<p>the config files can be found in the <a href="https://github.com/Eshanatnight/dotfiles/tree/main/wsl">dotfiles</a> repo</p>
 <hr />
 <h2 id="installing-ccpp-devtools"><a class="header" href="#installing-ccpp-devtools">Installing C/CPP Devtools</a></h2>
 <pre><code class="language-terminal">sudo apt-get update;
