--- a/print.html
+++ b/print.html
@@ -624,6 +624,20 @@ git rebase &lt;base&gt;
 # &lt;base&gt; can ben ID, a branch name, a tag, or a relative reference to HEAD
 
 </code></pre>
+<hr />
+<h2 id="submodule-already-in-index-error"><a class="header" href="#submodule-already-in-index-error">Submodule Already in Index Error</a></h2>
+<pre><code class="language-terminal"># Remove submodule
+git submodule deinit -f &lt;submodule-name&gt;
+rmr .gitmodules
+</code></pre>
+<p>Or</p>
+<pre><code class="language-terminal"># Remove all submodule
+git submodule deinit -f --all
+rmr .gitmodules
+</code></pre>
+<p>Now, remove the cached submodule</p>
+<pre><code class="language-terminal">git rm --cached &lt;submodule_dir-name&gt;
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="database"><a class="header" href="#database">Database</a></h1>
 <h2 id="oracle"><a class="header" href="#oracle">Oracle</a></h2>
 <h3 id="creating-a-new-user"><a class="header" href="#creating-a-new-user">Creating a new User</a></h3>
@@ -689,6 +703,22 @@ code dotfiles
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script type="text/javascript">
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
 
 
 
