--- a/print.html
+++ b/print.html
@@ -638,6 +638,13 @@ rmr .gitmodules
 <p>Now, remove the cached submodule</p>
 <pre><code class="language-terminal">git rm --cached &lt;submodule_dir-name&gt;
 </code></pre>
+<h2 id="removing-remote-tracking"><a class="header" href="#removing-remote-tracking">Removing Remote Tracking</a></h2>
+<pre><code class="language-terminal">git remote remove origin
+</code></pre>
+<hr />
+<h2 id="git-setting-up-new-remote"><a class="header" href="#git-setting-up-new-remote">Git Setting up new Remote</a></h2>
+<pre><code class="language-terminal">git remote set-url origin git://new.url.here
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="database"><a class="header" href="#database">Database</a></h1>
 <h2 id="oracle"><a class="header" href="#oracle">Oracle</a></h2>
 <h3 id="creating-a-new-user"><a class="header" href="#creating-a-new-user">Creating a new User</a></h3>
@@ -703,22 +710,6 @@ code dotfiles
 
         </div>
 
-        <!-- Livereload script (if served using the cli tool) -->
-        <script type="text/javascript">
-            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
-            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
-            const socket = new WebSocket(wsAddress);
-            socket.onmessage = function (event) {
-                if (event.data === "reload") {
-                    socket.close();
-                    location.reload();
-                }
-            };
-
-            window.onbeforeunload = function() {
-                socket.close();
-            }
-        </script>
 
 
 
